--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-flow-renderer": "^10.3.17",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
